--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -120,6 +120,57 @@
         }
       }
     },
+    "Отмена" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cancel"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Отмена"
+          }
+        }
+      }
+    },
+    "Ошибка" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Error"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ошибка"
+          }
+        }
+      }
+    },
+    "Подтвердить" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Accept"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Подтвердить"
+          }
+        }
+      }
+    },
     "Подтверждение регистрации" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -133,6 +184,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Подтверждение регистрации"
+          }
+        }
+      }
+    },
+    "Пожалуйста, введите номер в формате +7 ХХХ ХХХ ХХ ХХ" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Please enter phone number in format +7 XXX XXX XX XX"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Пожалуйста, введите номер в формате +7 ХХХ ХХХ ХХ ХХ"
           }
         }
       }
