Beginning of changes
- Updated spelling
- Updated layout for View
- Updated layout for Setting view

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -307,7 +307,7 @@
         }
       }
     },
-    "Зарегестрироваться" : {
+    "Зарегистрироваться" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
@@ -319,7 +319,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Зарегестрироваться"
+            "value" : "Зарегистрироваться"
           }
         }
       }
@@ -477,7 +477,7 @@
         }
       }
     },
-    "Нажимая кнопку “Далее” Вы принимаете пользовательское Соглашение и политику конфедициальности" : {
+    "Нажимая кнопку “Далее” Вы принимаете пользовательское Соглашение и политику конфиденциальности" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
@@ -528,7 +528,7 @@
         }
       }
     },
-    "Основаня информация" : {
+    "Основная информация" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
@@ -540,7 +540,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Основаня информация"
+            "value" : "Основная информация"
           }
         }
       }
