--- a/en.lproj/PostCell.stringsdict
+++ b/en.lproj/PostCell.stringsdict
@@ -59,9 +59,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%d Постов</string>
+			<string>%d Публикаций</string>
 			<key>one</key>
-			<string>%d Пост</string>
+			<string>%d Публикация</string>
 		</dict>
 	</dict>
 </dict>
